# roki-gazebo-patch

./: README.md
data/plugins/osc_pid_controller_plugin/: CMakeLists.txt
data/plugins/pid_position_player_plugin/: CMakeLists.txt  pid_position_player_plugin.cc
data/worlds/: test00_sphere.world  test01_box.world  test02_box_roll030.world  test03_box_pitch030.world  test04_box_yaw030.world  test05_sphere.world  test06_cylinder.world  test07_cylinder_roll030.world  test08_cylinder_pitch030.world  test09_box02.world  test10_box10.world  test11_box2fixed.world  test12_revol.world  test13_revol.world  test14_revol.world  test15_revol2.world  test16_revol2.world  test17_prism.world  test18_revol_trq.world  test20_simple_arm2.world  test22_world_fixed_joint.world  test23_simple_arm_fixed.world  test26_osc_pid_controller.world  test27_pid_position_player.csv  test27_pid_position_player.world  test29_arm_3_joints.csv  test29_arm_3_joints.maxpat  test29_arm_3_joints.world  test30_robot.memo  test30_robot.world  test31_robot.csv  test31_robot.maxpat  test31_robot.world  test32_robot_failer.world  test99_box3.world  test99_ragdoll.world
data/worlds/plugins/osc_pid_controller_plugin/: osc_pid_controller_plugin.cc
src/: patch-gazebo-roki-20160111.diff  physics.sdf.patch
